--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,8 @@
     box-sizing: border-box;
     }
 
-
-/* Set page size as A4*/
+    
+/* Set page size as A4  793* 1122*/
 body{
     width: 210mm;
     height: 297mm;
@@ -26,26 +26,39 @@ main{
     width: 100%;
     height: 100%;    
     margin-top: 0%;
+
 }
 
-#header{
+
+main > *{
+    width: 100%;
+}
+.header{
     display: flex;
     flex-direction: column;
-    height: 12%;
+    height: 180px;
     justify-content: space-between;
-    background-color: rgb(38, 91, 189);
-    border: 1px solid black;
+    $HEADER_COLOR$
+    $FONT_COLOR$
 }
 
-#text_and_date{
+
+.header > *{
+    width: 100%;
+    $HEADER_COLOR$
+}
+.text_and_date{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: rgb(38, 91, 189);
-    border: 1px solid black;
+
 }
 
-#date{
+#future{
+    $FUTURE_COLOR$
+}
+
+.date{
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
@@ -70,7 +83,7 @@ main{
 
 }
 
-#tage_delta{
+.tage_delta{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -78,7 +91,7 @@ main{
     
 }
 
-#tage{
+.tage{
     display: flex;
     flex-direction: row;
     width: 40%;
@@ -87,7 +100,7 @@ main{
 
 }
 
-#delta{
+.delta{
     display: flex;
     flex-direction: row;
     width: 40%;
@@ -96,15 +109,15 @@ main{
 
 }
 
-#tage_text{
+.tage_text{
     display: flex;
     justify-content: space-between;
 
 }
 
-#tage_value{
+.tage_value{
     display: flex;
-
+    color: black;
     background-color: cadetblue;
     
     width: 15%;
@@ -112,16 +125,16 @@ main{
     justify-content: space-around;
 }
 
-#delta_text{
+.delta_text{
     display: flex;
     justify-content: space-between;
 
 }
 
-#delta_value{
+.delta_value{
     display: flex;
     background-color: powderblue;
-    
+    color: black;
     width: 15%;
     align-items: center;
     justify-content: space-around;
@@ -129,44 +142,45 @@ main{
 }
 
 
-#title{
+.title{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: rgb(38, 91, 189);
 }
 
-#svg_image{
+.svg_image{
     display: flex;
     justify-content: center;
 }
 
-#future{
-    background-color: rgb(38, 91, 189);
+.future{
+    background-color: rgb(103, 151, 240);
 }
 
-#disclaimer{
+.disclaimer{
     text-align: center;
     font-size: 11px;
 }
 
-#bellow_image{
+.bellow_image{
     width: 100%;
-    height: 14.5%;
+    height: 130px;
     display: flex;
     flex-direction: column;
     padding-top: 1%;
+    page-break-after: always;
+
 }
 
-#legend_info_name{
-    height: 35%;
+.legend_info_name{
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-#legend_info{
-    width: 58.5%;
+.legend_info{
+    width: 419.5px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -175,61 +189,69 @@ main{
     font-size: 10px;
 }
 
-#legend{
+.legend{
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-grow: 3;
+    border: 1px solid black;
+
 }
 
 
-#legend0{
+.legend0{
     display: flex;
     width: 33.5%;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+
 }
 
-#große{
+.große{
     text-align: center;
-    font-size: 10px;
+    font-size: 13px;
+    font-weight: 600;
 }
 
 
-/* This is used in #legend0*/
-#yellow_block{
-    height: 30%;
-    width: 20%;
+/* This is used in .legend0*/
+.yellow_block{
+    height: 25%;
+    width: 30%;
     background-color: yellow;
 }
 
 
-#legend1{
+.legend1{
     display: flex;
     width: 33.5%;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     font-size: 10px;
+
 }
 
-#legend2{
+.legend2{
     display: flex;
     width: 32%;
-    
+
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    font-size: 10px;
+    font-size: 12px;
+    font-weight: 600;
+
 }
 
-.sum{
-    font-size: 11px;
-    font-weight: bold;
+.legend_sum{
+    font-size: 12px;
+    font-weight: 600;
+    text-align: center;
 }
 
-#sum_contracts{
+.sum_contracts{
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -237,46 +259,135 @@ main{
     align-items: center;
 }
 
-#gamma_short{
-    background-color: rgb(77, 166, 255);
+.gamma{
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     width: 100%;
     flex-grow: 1;
-}
-#gamma_long{
-    background-color: rgb(0, 204, 204);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    flex-grow: 1; 
+    font-size: 12px;
+    font-weight: 600;
 }
 
-#name{
+
+
+#gamma_short{
+    background-color: rgb(77, 166, 255);
+
+}
+
+#gamma_long{
+    background-color: rgb(0, 204, 204);
+
+}
+
+.name{
     flex-grow: 1;
     text-align: center;    
 }
 
-#info{
+.info{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    font-size: 10px;
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 600;
     flex-grow: 1;
+    text-align: center;
 
 }
 
-#data_images{
+.data_images{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 813px;
 }
 
-#table_bar{
+.data_images > *{
+    height: 813px;
+}
+
+.table_bar{
     display: flex;
     flex-direction: row;
+}
+
+.graph_header{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+}
+
+.front_date{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 419px;
+    text-align: center;
+    font-size: 24px;
+
+}
+
+.hedge_info{
+    height: 50px;
+    width: 375px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 14px;
+    border: 1px solid black;
+}
+
+.sum {
+    text-align: center;
+}
+
+
+.legend1_verfall{
+    width: 100%;;   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.gamma_verfall{
+    width: 40%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+#preise{
+    page-break-after: always;
+}
+
+#disclaimer{
+    page-break-after: always;
+}
+
+.glossar{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 10px;
+    border: 1px solid black;
+}
+
+.term{
+    width: 40%;
+    text-align: left;
+    font-weight: 600;
+}
+
+.definition{
+    width: 80%;
+    text-align: left;
 }
